--- a/pcv.css
+++ b/pcv.css
@@ -33,3 +33,55 @@ section{
 	margin-right: 0px;
 	float: left;
 }
+aside{ 
+    float:right;
+    background-color: rgb(230, 224, 224);
+    color: white;
+    overflow: hidden;
+    margin-left: 0%;
+	margin-top: 40px;
+	margin-right: 20px;
+    padding: 1%;
+	width: 250px;
+	text-align: justify;
+}
+
+.imagen{
+	margin-left:40px;
+	margin-top: 20px;
+	margin-right: 10px;
+    padding: 1%;
+}
+.columna1{
+	height: 500px;
+    width: 300px;
+	font-family: Arial, Helvetica, sans-serif;
+	padding-left: 0px;
+	list-style: none;
+	margin-right: 0px;
+	margin-left: 10px;
+	margin-bottom: 0px;
+	margin-right: 0px;
+	float: left;
+	border-collapse: separate;
+	border-spacing:  5px 15px;
+	
+}
+
+.columna2{
+	height: 500px;
+    width: 180px;
+	font-family: Arial, Helvetica, sans-serif;
+	padding-left: 0px;
+	list-style: none;
+	margin-right: 0px;
+	margin-left: 0px;
+	margin-bottom: 0px;
+	margin-right: 0px;
+	float: right;
+	margin-top: 0px;
+	border-collapse: separate;
+	border-spacing:  5px 15px;
+	text-align: center;
+	
+}
