--- a/pcv.css
+++ b/pcv.css
@@ -10,7 +10,7 @@
 
 .titulo{
 	text-align:start;
-	background-color: rgb(126, 190, 126);
+	background-color: rgb(39, 82, 39);
 	height: 100px;
 	width:860px;
 	margin-top: 0px;
@@ -24,7 +24,7 @@ section{
     background-color: rgb(255, 255, 255);
     height: 500px;
     width: 500px;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Times New Roman', Times, serif;
 	padding-left: 0px;
 	list-style: none;
 	margin-right: 0px;
